add uncat endpoint
